using UnityEngine;

namespace GDD
{
    public interface IInteract
    {
        void OnInteract();
    }
}