@startuml
'https://plantuml.com/class-diagram

TriggerHandle_Collider <|-- TriggerHandle
class "TriggerHandleWithCollider<Collider>" as TriggerHandle_Collider
{
# override void OnTriggerEnter(Collider other)
# override void OnTriggerStay(Collider other)
# override void OnTriggerExit(Collider other)
}

TriggerHandle_string <|-- TriggerHandle
class "TriggerHandleTag<string>" as TriggerHandle_string
{
# override void OnTriggerEnter(Collider other)
# override void OnTriggerStay(Collider other)
# override void OnTriggerExit(Collider other)
}

TriggerHandle_LayerMask <|-- TriggerHandle
class "TriggerHandleLayerMask<LayerMask>" as TriggerHandle_LayerMask
{
# override void OnTriggerEnter(Collider other)
# override void OnTriggerStay(Collider other)
# override void OnTriggerExit(Collider other)
}

class TriggerHandle<T>
{
# T checkID
        # UnityEvent<T> m_triggerEnterEvent
        # UnityEvent<T> m_triggerStayEvent
        # UnityEvent<T> m_triggerExitEvent

       # virtual void OnTriggerEnter(Collider other)
       # virtual void OnTriggerStay(Collider other)
       # virtual void OnTriggerExit(Collider other)
}

interface IInteract
{
void OnInteract()
}

class ObjectInteract implements IInteract
{
public void OnInteract()
}

namespace UnityEngine #DDDDDD {
    .ObjectInteract <|-- MonoBehaviour
    .TriggerHandle <|-- MonoBehaviour
}

@enduml